# resworb

./: README.md  README.org  pyproject.toml  setup.py
examples/: export.py
resworb/: __init__.py  base.py  exporter.py  formatter.py
resworb/browsers/: chrome.py  firefox.py  safari.py
resworb/commands/: cli.py  safari_export.py
