[project]
name = "resworb"
version = "0.2.1"
description = "Manage browser data in Python."
authors = [
    {name = "Yevgnen Koh", email = "wherejoystarts@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "pytoml>=0.1.21",
    "PyYAML>=5.4.1",
    "lz4>=3.1.3",
    "lxml>=4.9.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
resworb = "resworb.commands.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
